--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -7,12 +7,14 @@
     //var progressiePercentageCompleted = (int)(System.Math.Round(progressiePercentage, 0) - ((decimal)100 / progressie[0]));
 }
 <meta name="viewport" content="width=device-width, initial-scale=1">
+@*<meta http-equiv="refresh" content="15">*@
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <head>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+
 
 
 
@@ -45,25 +47,37 @@
                         </div>
                     </div>
                 </p>*@
-            <div>
-                <div id="pdf">
-                    <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
-                    <object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf" id="pdf_hulp" style="display:none"></object>
+
+                <div>
+                    <div id="pdf">
+                        <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
+                        @*<object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf" id="pdf_hulp" style="display:none"></object>*@
+
+                    </div>
+                </div>
+                <div id="Antwoord">
+                    
+                        <p><label asp-for="Groepsantwoord"></label></p>
+                        <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
+                        <p><span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span></p>
+
+                        <p>@TempData["FouteCode"]</p>
+                        @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
+
+                        <button type="submit" class="" id="GaVerder">Ga verder</button>
+                    }
+                    else
+                    {
+                        <button type="submit" style="font-size:22px" onClick="window.location.reload()"> <i class="fa">&#xf021;</i></button>
+                        <button type="button" id="Feedback" onclick="hulp()">Feeback</button>
+                        <button type="submit" style="font-size:22px" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.SessieCode" asp-route-groepid="@Model.GroepId"> <i class="fa">&#xf021;</i></button>
+                        @*<input type="image" src="" name="saveForm" class="fa fa-refresh btTxt submit" id="saveForm" value="Refresh Page" onClick="window.location.reload()" />*@
+
+
+                    }
 
                 </div>
-            </div>
-
-            <div id="Antwoord">
-                <p><label asp-for="Groepsantwoord"></label></p>
-                <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
-                <p><span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span></p>
-
-                <p>@TempData["FouteCode"]</p>
-                @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
-
-                <button type="submit" class="" id="GaVerder" onclick="hulp()">Ga verder</button>
-            </div>
-
+        
 
 
             @*<div id="Opnieuw" style="display:none">
@@ -95,6 +109,7 @@
                 <p><input asp-for="JuistGeantwoordOpgaveString" type="text" class="form-control" autocomplete="off" value="" id="JuistGeantwoordOpgaveStringId" /></p>
 
             </div>
+
         </form>
     </div>
 </div>
@@ -107,19 +122,26 @@
     <script>
         console.log("Antwoord " + @(Model.Opdracht.Oefening.Antwoord.ToString()));
         console.log("Toegangscode " + @(Model.ToegangscodeVolgendeOefening.ToString()));
-        console.log("State " + @Model.Sessie.State);
         console.log("Antwoord met toegangscode: " + @(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking()));
+        console.log("Teller " + @Model.Opdracht.foutePogingen);
+        console.log("Progressie " + @progressie[0] + " " + @progressie[1]);
+        console.log("State " + @TempData["State"]);
+        console.log("SessieCode " + @Model.SessieCode);
+        @*console.log("SessieCode " +@Model.Sessie.Code);*@
+        @*console.log("GroepId " +@Model.Groep.GroepId);*@
+        console.log("GroepId " +@Model.GroepId);
 
         if ("@(Model.JuistGeantwoordOpgave)" == "True") {
             document.getElementById("Toegangscode").value = (@(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking().ToString()));
 
             document.getElementById("JuistGeantwoordtoegangscodeStringId").value = "True";
 
-            groepsantwoordJuist();
-        } else {
-            @Model.State
-
-        }
+            if (@TempData["State"] !=3 && @TempData["State"] !=2) {
+                groepsantwoordJuist();
+            }
+            else {
+                geblokkeerd();  
+            }
         console.log("bool " + '@(Model.JuistGeantwoordOpgave)');
         console.log("bool " + '@(Model.JuistGeantwoordtoegangscode)');
 
@@ -171,43 +193,48 @@
         }
 
         function hulp() {
-            if (@Model.State == 3) {
-                swal({ // de swal van alle oefeningen
-                    title: "Theorie",
-                    text: "@Model.Opdracht.Actie.Omschrijving.ToString()",
-                    type: "input",
-                    showCancelButton: true,
-                    closeOnConfirm: false,
-                    animation: "slide-from-top",
-                    //inputPlaceholder: "Toegangscode"
+          swal({
+                title: "Feedback",
+                type: "info",
+                showCancelButton: false,
+                closeOnConfirm: true,
+                confirmButtonText: "Theorie pdf",
+                animation: "slide-from-top",
+            },
+                function () {
+                    window.open("/algemenepdfs/Theorie.pdf");
                 });
-            }
+
+                console.log("Gelukt");
+
         }
+
+        function geblokkeerd() {
+
+
+            swal({
+                title: "Geblokkeerd",
+                type: "Warning",
+                showCancelButton: false,
+                closeOnConfirm: true,
+                confirmButtonText: "Refresh",
+                animation: "slide-from-top",
+            },
+                function () {
+                    window.location.reload();
+
+                }
+
+
+        }
+
+
     function delaySubmit() {
         document.getElementById("formAntwoord").submit();
     }
 
     </script>
 
-    <script>
-
-
-        @*function blokkeerGroep() {
-            if (@Model.TellerFoutePogingen >= 2) {
-                console.log("Test");
-
-                document.getElementById("Antwoord").style.display = 'none';
-
-                document.getElementById("GaVerder").style.display = 'none';
-                document.getElementById("Stop").style.display = 'block';
-                document.getElementById("Toegangscode").style.display = 'block';
-                document.getElementById("Antwoord").style.display = 'block';
-            }
-        }*@
-
-
-
-    </script>
 
 
 
