--- a/BreakOutBox/Views/Sessie/Index.cshtml
+++ b/BreakOutBox/Views/Sessie/Index.cshtml
@@ -10,7 +10,6 @@
         <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" /></p>
         <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
         <p>@TempData["message"]</p>
-        @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
-        <p><button type="submit" class="">Ga verder</button></p>
+        <p><button type="submit">Ga verder</button></p>
     </form>
 </div>
