Add restricted to Leerkracht views, fix new sessie link

--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     <div class="container">
         @RenderBody()
         <footer class="text-center">
-            <p><a asp-controller="Sessie" asp-action="Index">Deelnemen aan andere sessie? Klik dan hier.</a></p>
+            <p><a asp-controller="Home" asp-action="Index">Deelnemen aan andere sessie? Klik dan hier.</a></p>
             <p>&copy; 2018 - BreakOutBox</p>
         </footer>
     </div>
